# bayesian-data-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-marble-bag-problem.ipynb  02-logistic-regression.ipynb
notebooks/rethink-stats/: week-01.ipynb
