[tool.poetry]
name = "bayesian-data-analysis"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
seaborn = "^0.11.2"
scikit-learn = "^1.0.1"
numpyro = "^0.8.0"
arviz = "^0.11.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
